--- a/app/views/appellant-submission/v16/before-you-start/claiming-costs.html
+++ b/app/views/appellant-submission/v16/before-you-start/claiming-costs.html
@@ -1,5 +1,5 @@
-{% set pageref = "BYS-007-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "BYS-007-AS16" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Are you claiming costs as part of your appeal?- Before you start - {{serviceName}} - GOV.UK
