--- a/app/views/appellant-submission/v16/before-you-start/decision-date-due.html
+++ b/app/views/appellant-submission/v16/before-you-start/decision-date-due.html
@@ -1,5 +1,5 @@
-{% set pageref = "BYS-008-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "BYS-008-AS16" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   What date was your decision due? - Before you start - {{serviceName}} - GOV.UK
