--- a/app/views/appellant-submission/v16/before-you-start/shutter/out-of-time-full.html
+++ b/app/views/appellant-submission/v16/before-you-start/shutter/out-of-time-full.html
@@ -1,5 +1,5 @@
-{% set pageref = "BYS-OOT-1-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "BYS-OOT-1-AS16" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   You cannot appeal - {{serviceName}} - GOV.UK
