--- a/app/views/appellant-submission/v16/guidance/submit-an-appeal.html
+++ b/app/views/appellant-submission/v16/guidance/submit-an-appeal.html
@@ -105,7 +105,7 @@
           Continue a saved appeal
         </h2>
         <p class="govuk-body">
-          If you've already started your appeal, you can <a href="/appellant-submission/v15/save-return/continue-appeal" class="govuk-link">continue your appeal</a>.
+          If you’ve already started your appeal, you can <a href="/appellant-submission/v15/save-return/continue-appeal" class="govuk-link">continue your appeal</a>.
         </p>
 
         <h2 class="govuk-heading-l pins-guidance-h2">
