--- a/app/views/appellant-submission/v16/listed-building/appeal-site/own-land.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-site/own-land.html
@@ -1,5 +1,5 @@
-{% set pageref = "LB-AAS-002-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "LB-AAS-002-AS16" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Do you own all the land involved in the appeal? - Tell us about the appeal site - {{serviceName}} - GOV.UK
