--- a/app/views/appellant-submission/v16/listed-building/contact-details/who-are-you.html
+++ b/app/views/appellant-submission/v16/listed-building/contact-details/who-are-you.html
@@ -1,5 +1,5 @@
-{% set pageref = "LB-PYC-001-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "LB-PYC-001-AS16" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Was the planning application made in your name? - Provide your contact details - {{serviceName}} - GOV.UK
