--- a/app/views/appellant-submission/v16/listed-building/planning-application-documents/confirming-letter.html
+++ b/app/views/appellant-submission/v16/listed-building/planning-application-documents/confirming-letter.html
@@ -1,5 +1,5 @@
-{% set pageref = "LB-PLA-010-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "LB-PLA-010-AS16" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   The letter confirming your planning application - Upload documents from your planning application - {{serviceName}} - GOV.UK
