--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,19 +8,24 @@ service-start{% extends "layout.html" %}
 
   <div class="govuk-width-container">
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full">
+      <div class="govuk-grid-column-two-thirds">
 
         <h1 class="govuk-heading-xl">
           {{serviceName}} prototypes
         </h1>
 
         <h2 class="govuk-heading-l">Introduction</h2>
+
         <p class="govuk-body">
           Users make a planning application to their local planning authority (LPA), which is usually their local council. If the LPA makes a decision that the user thinks is incorrect, legislation says they can appeal the decision. They can also appeal if the LPA takes too long to make a decision.
         </p>
         <p class="govuk-body">
           These prototypes cover different journeys for users of the appeal a planning decision service. This includes appellants, agents acting on behalf of appellants, LPAs, case officers, and inspectors.
         </p>
+
+      <!-- </div>
+      <div class="govuk-grid-column-full"> -->
+
         <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
         {{ govukTag({
