--- a/app/views/appellant-submission/v16/before-you-start/planning-department.html
+++ b/app/views/appellant-submission/v16/before-you-start/planning-department.html
@@ -1,5 +1,5 @@
-{% set pageref = "BYS-001-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "BYS-001-AS16" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Which local planning department dealt with your planning application?
