--- a/app/views/appellant-submission/v16/listed-building/appeal-documents/planning-obligation-upload.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-documents/planning-obligation-upload.html
@@ -1,13 +1,13 @@
 {% if data["appealsub-v15-appealdocs-planningobligation-status"] == "Finalised and ready to submit" %}
-  {% set pageref = "LB-APP-008-AS15" %}
+  {% set pageref = "LB-APP-008-AS16" %}
 {% endif %}
 {% if data["appealsub-v15-appealdocs-planningobligation-status"] == "In draft" %}
-  {% set pageref = "LB-APP-009-AS15" %}
+  {% set pageref = "LB-APP-009-AS16" %}
 {% endif %}
 {% if data["appealsub-v15-appealdocs-planningobligation-status"] == "Not started yet" %}
-  {% set pageref = "LB-APP-010-AS15" %}
+  {% set pageref = "LB-APP-010-AS16" %}
 {% endif %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   {% if data["appealsub-"+version+"-appealdocs-planningobligation-status"] == "Finalised and ready to submit" %}
