--- a/app/views/appellant-submission/v16/listed-building/appeal-documents/plans-drawings.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-documents/plans-drawings.html
@@ -1,5 +1,5 @@
-{% set pageref = "LB-APP-002-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "LB-APP-002-AS16" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Plans and drawings - Upload documents for your appeal - {{serviceName}} - GOV.UK
