--- a/app/views/appellant-submission/v16/listed-building/appeal-site/health-safety.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-site/health-safety.html
@@ -1,5 +1,5 @@
-{% set pageref = "LB-AAS-016-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "LB-AAS-016-AS16" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Are there any health and safety issues on the appeal site? - Tell us about the appeal site - {{serviceName}} - GOV.UK
