--- a/app/views/appellant-submission/v16/listed-building/appeal-site/knows-none/advertising-appeal.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-site/knows-none/advertising-appeal.html
@@ -1,5 +1,5 @@
-{% set pageref = "LB-AAS-010-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "LB-AAS-010-AS16" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Advertising your appeal - Tell us about the appeal site - {{serviceName}} - GOV.UK
