--- a/app/views/appellant-submission/v16/listed-building/appeal-site/knows-none/identifying-landowners.html
+++ b/app/views/appellant-submission/v16/listed-building/appeal-site/knows-none/identifying-landowners.html
@@ -1,5 +1,5 @@
-{% set pageref = "LB-AAS-009-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "LB-AAS-009-AS16" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Identifying the {% if data["appealsub-"+version+"-appealsite-ownsome"] == "Yes" %}other {% endif %}landowners - Tell us about the appeal site - {{serviceName}} - GOV.UK
