--- a/app/views/appellant-submission/v16/listed-building/declaration.html
+++ b/app/views/appellant-submission/v16/listed-building/declaration.html
@@ -1,5 +1,5 @@
-{% set pageref = "LB-DEC-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "LB-DEC-AS16" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Declaration - Check your answers and submit your appeal - {{serviceName}} - GOV.UK
@@ -37,11 +37,11 @@
         <p>
         <ul class="govuk-list govuk-list--bullet">
           <li>this is your only opportunity to submit the appeal</li>
-          <li>if you have not included all the information we've requested, we may not be able to progress your appeal</li>
+          <li>if you have not included all the information we’ve requested, we may not be able to progress your appeal</li>
           <li>we will contact you about any missing information, but this may delay your appeal​</li>
         </ul>
         <p class="govuk-body">
-          You also confirm that you've completed all sections and the details are correct to the best of your knowledge.
+          You also confirm that you’ve completed all sections and the details are correct to the best of your knowledge.
         <p>
         
         <div class="govuk-inset-text">
