--- a/app/views/appellant-submission/v16/listed-building/planning-application-documents/application-upload.html
+++ b/app/views/appellant-submission/v16/listed-building/planning-application-documents/application-upload.html
@@ -1,5 +1,5 @@
-{% set pageref = "LB-PLA-001-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "LB-PLA-001-AS16" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Planning application form - Upload documents from your planning application - {{serviceName}} - GOV.UK
