--- a/app/views/appellant-submission/v16/listed-building/procedure-type/common-ground.html
+++ b/app/views/appellant-submission/v16/listed-building/procedure-type/common-ground.html
@@ -1,5 +1,5 @@
-{% set pageref = "LB-DYA-005-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "LB-DYA-005-AS16" %}
+{% extends "layout.html" %}
 
 {% block pageTitle %}
   Upload your draft statement of common ground - Tell us how you would prefer us to decide your appeal - {{serviceName}} - GOV.UK
