--- a/app/views/appellant-submission/v16/save-return/enter-appeal-details.html
+++ b/app/views/appellant-submission/v16/save-return/enter-appeal-details.html
@@ -1,5 +1,5 @@
-{% set pageref = "SAR-014-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "SAR-014-AS16" %}
+{% extends "layout.html" %}
 
 {% set title = "Enter your appeal details" %}
 
