--- a/app/views/appellant-submission/v16/save-return/expired-link.html
+++ b/app/views/appellant-submission/v16/save-return/expired-link.html
@@ -1,5 +1,5 @@
-{% set pageref = "SAR-006-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "SAR-006-AS16" %}
+{% extends "layout.html" %}
 
 {% set title = "The link has expired" %}
 
