--- a/app/views/appellant-submission/v16/save-return/request-code.html
+++ b/app/views/appellant-submission/v16/save-return/request-code.html
@@ -1,5 +1,5 @@
-{% set pageref = "SAR-010-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "SAR-010-AS16" %}
+{% extends "layout.html" %}
 
 {% set title = "Request a new code" %}
 
