--- a/app/views/appellant-submission/v16/save-return/what-is-your-application-number.html
+++ b/app/views/appellant-submission/v16/save-return/what-is-your-application-number.html
@@ -1,5 +1,5 @@
-{% set pageref = "SAR-001-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "SAR-001-AS16" %}
+{% extends "layout.html" %}
 
 {% set title = "What’s your planning application number?" %}
 
