--- a/app/views/appellant-submission/v16/save-return/you-cannot-appeal.html
+++ b/app/views/appellant-submission/v16/save-return/you-cannot-appeal.html
@@ -1,5 +1,5 @@
-{% set pageref = "SAR-012-AS15" %}
-{% extends "layouts/appellant-submission/v15.html" %}
+{% set pageref = "SAR-012-AS16" %}
+{% extends "layout.html" %}
 
 {% set title = "You cannot appeal" %}
 
