--- a/app/views/enforcement/v3/contact-details/company-name.html
+++ b/app/views/enforcement/v3/contact-details/company-name.html
@@ -3,7 +3,7 @@
 
 {% extends "layout.html" %}
 
-{% set title = "Who was named on the enforcement notice?" %}
+{% set title = "What is the company name on the enforcement notice?" %}
 
 {% block pageTitle %}
   {{title}} - GOV.UK
@@ -27,39 +27,24 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form method="post">
+    <form action="contact-details" method="post">
 
       <span class="govuk-caption-l">
         Provide your contact details
       </span>
 
-      {{ govukRadios({
-        idPrefix: "enforcement-identity",
-        name: "enforcement-identity",
-        fieldset: {
-          legend: {
-            text: title,
-            isPageHeading: true,
-            classes: "govuk-fieldset__legend--l"
-          }
+      {{ govukInput({
+        label: {
+          text: title,
+          classes: "govuk-label--l",
+          isPageHeading: true
         },
         hint: {
-          text: "If you are not the person or the company named on the enforcement notice, you must have permission to submit an appeal on their behalf."
+          text: "Write the name as it is written on the enforcement notice"
         },
-        items: [
-          {
-            value: "appellant",
-            text: "Myself"
-          },
-          {
-            value: "agent",
-            text: "Another person"
-          },
-          {
-            value: "company",
-            text: "A company"
-          }
-        ]
+        id: "enforcement-company-name",
+        name: "enforcement-company-name",
+        classes: "govuk-input--width-20"
       }) }}
 
       {{ govukButton({
